--- a/src/hunsu/CSS/create.css
+++ b/src/hunsu/CSS/create.css
@@ -1,27 +1,60 @@
 .create {
     text-align: center;
+    margin: 40px;
+    height: 0px;
+}
+
+.create .editor {
+    border:2px black solid;
+    border-radius: 10px;
+    height: 270px;
+    margin-bottom: 5px;
+
+}
+.create .description {
+    margin-top: 20px;
+    text-align: left;
+}
+
+.create .title {
+    width: 100%;
+    border-radius: 10px;
+    border-color: black;
+    height: 40px;
+    margin-bottom: 5px;
+    text-align: center;
+}
+
+.empty {
+    font-size: 23px;
+    font-style: italic;
+    font-weight: bold;
+    text-align: center;
 }
 
 .profile_preview {
-    margin-top: 2.5px;
+    width: 100%;
+    height: 100%;
     border-radius: 5px;
-    height: 140px;
-    width: 140px;
 }
 
-.img-holder{
-    width: 150px;
-    height: 150px;
-    border: 3px black solid;
-    border-radius: 5px;
-    margin-top: 1rem;
-    margin-bottom: 0px;
+.create .img-holder{
+    width: 100%;
+    height: 200px;
+    border: 2px black solid;
+    border-radius: 10px;
 }
 
 .img{
     width: 150px;
     height: 150px;
     object-fit: cover;
+}
+
+.create .button {
+    width: 47%;
+    margin-right: 0px;
+    background-color: black;
 }
 
 #input[type="file"] {
@@ -38,11 +71,15 @@
   
 .image-upload{
     margin: auto;
-    width: 150px;
+    width: 100%;
     height: 30px;
-    color: white;
+    color: black;
     border-radius: 10px;
-    background-color: black;
+    border: 2px black solid;
     text-align: center;
     cursor: pointer;
+}
+
+.create .buttonContainer {
+    flex-direction: row;
 }
