--- a/src/hunsu/CSS/create.css
+++ b/src/hunsu/CSS/create.css
@@ -1,25 +1,29 @@
 .create {
     text-align: center;
-    margin: 40px;
+    margin: 15px;
+    color: #123456;
     height: 0px;
 }
 
 .create .editor {
-    border:2px black solid;
+    border:2px #123456 solid;
     border-radius: 10px;
-    height: 270px;
-    margin-bottom: 5px;
+    height: 150px;
+    margin-bottom: 15px;
 
 }
-.create .description {
-    margin-top: 20px;
+.create .descrip {
+    margin-top: 12px;
+    color: #123456;
     text-align: left;
+    font-style: italic;
+    font-weight: bold;
 }
 
 .create .title {
     width: 100%;
     border-radius: 10px;
-    border-color: black;
+    border-color: #123456;
     height: 40px;
     margin-bottom: 5px;
     text-align: center;
@@ -29,6 +33,8 @@
     font-size: 23px;
     font-style: italic;
     font-weight: bold;
+    color: #123456;
+    margin-top: 10px;
     text-align: center;
 }
 
@@ -41,7 +47,7 @@
 .create .img-holder{
     width: 100%;
     height: 200px;
-    border: 2px black solid;
+    border: 2px #123456 solid;
     border-radius: 10px;
 }
 
@@ -54,7 +60,7 @@
 .create .button {
     width: 47%;
     margin-right: 0px;
-    background-color: black;
+    background-color: #123456;
 }
 
 #input[type="file"] {
@@ -73,9 +79,9 @@
     margin: auto;
     width: 100%;
     height: 30px;
-    color: black;
+    color: #123456;
     border-radius: 10px;
-    border: 2px black solid;
+    border: 2px #123456 solid;
     text-align: center;
     cursor: pointer;
 }
