--- a/src/crew/CrewPage.css
+++ b/src/crew/CrewPage.css
@@ -39,3 +39,29 @@
 .disallow-chat{
 	text-align: center;
 }
+
+ul {
+    list-style-type: none;
+}
+
+.mini-card {
+    padding: 1.5rem;
+    border-radius: 16px;
+    background: #6bb5d8;
+    color: #fff;
+    display: flex;
+    flex-direction: column;
+    transition: .2s;
+	margin: 0;
+	/* box-shadow: -1rem 0 3rem rgb(182, 182, 182); */
+	margin-top: 20px;
+	margin-bottom: 20px;
+	margin-left: 30px;
+	margin-right: 30px;
+	position: relative;
+	/* box-sizing: border-box; */
+}
+
+.mini-card:hover {
+	transform: translateY(-1rem);
+}
