--- a/src/hunsu/CSS/Post.css
+++ b/src/hunsu/CSS/Post.css
@@ -5,3 +5,9 @@
     font-size: 13px;
 }
 
+.postlikes {
+    text-align: right;
+    font-weight: 1000;
+    font-style: italic;
+    font-size: 13px;
+}
