--- a/src/calendar/Calendar.css
+++ b/src/calendar/Calendar.css
@@ -2,3 +2,18 @@
   width: XYpx;
   height: XYpx;
 }
+
+.titleCalendar{
+  color: #123456;
+  margin-top: 10px;
+  text-align: center;
+}
+
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+#ubuntuFont {
+
+
+  font-family: Ubuntu;
+  font-weight: 500;
+  font-size: 2em;
+}
