--- a/src/info/infoPage.css
+++ b/src/info/infoPage.css
@@ -8,6 +8,27 @@
 
 }
 
+.titleProfile{
+  color: #123456;
+  margin-top: 10px;
+  text-align: center;
+}
+
+
+@import url('https://fonts.googleapis.com/css?family=Ubuntu');
+#ubuntuFont {
+
+
+  font-family: Ubuntu;
+  font-weight: 500;
+  font-size: 2em;
+}
+
+
+
+
+
+
 
 
 
