profile with real data

--- a/src/info/infoPage.css
+++ b/src/info/infoPage.css
@@ -54,7 +54,7 @@
 
 
 @import url('https://fonts.googleapis.com/css?family=Ubuntu');
-#ubuntuSmallGray {
+#ubuntuSmallBlack {
 
   font-family: Ubuntu;
   font-weight: 400;
